# stable-diffusion-grpcserver

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.cuda118  Dockerfile.protoc  README.md  build.sh  client.py  engines.yaml  environment.yaml  generation_pb2.py  openapiconfig.yaml  pyproject.toml  server.py
docker_support/: build_protoc.sh  run.sh
gyre/: constants.py  debug_recorder.py  k_diffusion.py  manager.py  patching.py  protobuf_safetensors.py  resize_right.py  server.py  utils.py
gyre/config/: engines.yaml
gyre/http/: grpc_gateway.py  grpc_gateway_controller.py  stability_rest_api.py
gyre/pipeline/: attention_replacer.py  common_scheduler.py  diffusers_types.py  latent_debugger.py  lora.py  samplers.py  unified_pipeline.py  upscaler_pipeline.py  xformers_utils.py
gyre/services/: dashboard.py  engines.py  generate.py
gyre/sonora/: aio.py  asgi.py  client.py  echotest.py  wsgi.py
nonfree/: README.md  tome_memory_efficient_cross_attention.py  tome_patcher.py
sdgrpcserver/: __init__.py  constants.py  images.py  manager.py  protobuf_tensors.py  ram_monitor.py  resize_right.py  scheduling_euler_ancestral_discrete.py  scheduling_euler_discrete.py  server.py  unified_op_pipeline.py  unified_pipeline.py  utils.py
sdgrpcserver/config/: dist_hashes  engines.yaml  genhashes.sh
sdgrpcserver/http/: grpc_gateway.py  (+3 more)
sonora/: client.py  wsgi.py
tests/: batch_independance.py  engines.basic.yaml  engines.clip.yaml  engines.inpaint.yaml  engines.sd14.yaml  graftedpaint.engine.yaml  graftedpaint.py  happy_path.engines.yaml  happy_path.py  prompt_weights.engine.yaml  prompt_weights.py  schedulers.py  test_harness.py
(+79 files in other folders)
